# SimonSays

./: .gitignore  CMakeLists.txt  README.md  buildSimonSays.sh  config.h.in  main.cpp  raspberrytoolchain.cmake
bsp/: CMakeLists.txt
bsp/include/bsp/: bsp.h
bsp/src/bsp/: bsp.cpp
